syntax = "proto3";
package io.harness.eventsframework.schemas.entitysetupusage;
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_type.proto";

option java_multiple_files = true;
option go_package = "950_events_api";

message DeleteSetupUsageDTO {
  string accountIdentifier = 1;
  string referredEntityFQN = 2;
  string referredByEntityFQN = 3;
  io.harness.eventsframework.schemas.entity.EntityTypeProtoEnum referredEntityType = 4;
  io.harness.eventsframework.schemas.entity.EntityTypeProtoEnum referredByEntityType = 5;
}